Fixed scrolling of the Ads to remain fixed left and not bleed into content screen position

--- a/app/van.Web/Content/Site.css
+++ b/app/van.Web/Content/Site.css
@@ -510,6 +510,8 @@ a:active {
 .ads {
 	text-align:center;
 	margin:20px 0;
+	position:absolute;
+	width:180px;
 	}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
